# udpServer

./: .gitignore  Cargo.toml  README.md  scheme.fbs
UDPServer/: Cargo.toml
UDPServer/Schemes/: scheme.fbs
UDPServer/src/: client.rs  general_types.rs  lib.rs  listener.rs  server_settings.rs
src/: main.rs  schema_generated.rs  scheme_generated.rs
