[package]
name = "udpGameServer"
version = "0.1.0"
authors = ["Ficus <pogasiid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
flatbuffers = "0.7.0"
serde = "1.0.125"
serde_json = "1.0.64"


#[dependencies]
#columns = {path = "Columns" }
#
#[workspace]
#members = [
#    "Structs",
#    "Columns",
#]